# elasticsearch-full-match

./: README.md  compose.yml  pyproject.toml
elasticsearch_full/: conditional.py  full.py  keyword.py  reversed.py  sentinel.py  shingles.py
tests/: test_full.py
